--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         repository: ${{ env.PERSONAL_PLUGIN_REPO }}
-        token: ${{ secrets.XIVCOMBO_TOKEN }}
+        token: ${{ secrets.XIVTOKEN }}
     - uses: actions/download-artifact@v4
       with:
         name: PluginRepoZip
