--- a/WrathCombo/WrathCombo.csproj
+++ b/WrathCombo/WrathCombo.csproj
@@ -2,9 +2,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<Authors>Team Wrath</Authors>
+		<Authors>Team Wrath - Aki's repo</Authors>
 		<Company>-</Company>
-		<Version>1.0.0.3</Version>
+		<Version>0.0.0.3</Version>
 		<!-- This is the version that will be used when pushing to the repo.-->
 		<Description>XIVCombo for very lazy players</Description>
 		<Copyright>Copyleft attick 2021 thanks attick UwU</Copyright>
